# Anim-Paint

./: .gitignore  CMakeLists.txt  README.md
Anim-Paint/: Animation.hpp  Brush.hpp  Button.hpp  Canvas.hpp  Checkbox.hpp  ClipBoard.hpp  ColorsDialog.hpp  Dialog.hpp  ElementGUI.hpp  Filters.hpp  Frame.hpp  Frames.hpp  FramesDialog.hpp  Lasso.hpp  Layer.hpp  Layers.hpp  LayersDialog.hpp  MainMenu.hpp  Selection.hpp  Slider.hpp  Textures.hpp  Theme.hpp  Tools.hpp  Window.hpp  WorldToTileConverter.hpp  app.res  main.cpp
Anim-Paint/dialogs/: Dialog_Image_Rotation.hpp  Dialog_Image_Saturation.hpp  Dialog_image_brightness_contrast.hpp
Anim-Paint/effects/: brighten.txt
Anim-Paint/ico/: app.aps  app.rc
Anim-Paint/include/: Animation.hpp  BottomBar.hpp  Brush.hpp  Canvas.hpp  Checkbox.hpp  ClipBoard.hpp  Cursor.hpp  DebugLog.hpp  Dialog.hpp  ElementGUI.hpp  Filters.hpp  Frame.hpp  History.hpp  Lasso.hpp  LayersDialog.hpp  MainMenu.hpp  Mouse.hpp  Selection.hpp  Slider.hpp  Textures.hpp  Theme.hpp  Time.hpp  Tools.hpp  Tooltip.hpp  Window.hpp  WorldToTileConverter.hpp
Anim-Paint/include/Animation/: Animation.hpp  Frame.hpp  Layer.hpp
Anim-Paint/include/Components/: AnimationsDialog.hpp  AnimationsPanel.hpp  BottomBar.hpp  Canvas.hpp  FramesDialog.hpp  FramesPanel.hpp  LayersDialog.hpp  LayersPanel.hpp  MainMenu.hpp  PreviewAnimationPanel.hpp  Toolbar.hpp  Tooltip.hpp
Anim-Paint/include/Components/LayersPanel/: LayerBox.hpp  LayersPanel.hpp
Anim-Paint/include/Components/MainMenu/: MainMenu.hpp  MenuBox.hpp  MenuButton.hpp  OptionBox.hpp
Anim-Paint/include/Components/Toolbar/: ButtonWithBottomText.hpp  ButtonWithRightText.hpp  ButtonWithTopTextAndList.hpp  ColorButton.hpp  LargeColorButton.hpp  Option.hpp  OptionWithCheckbox.hpp  PaletteButton.hpp  Separator.hpp  Toolbar.hpp
Anim-Paint/include/Controls/: Button.hpp  ButtonWithSprite.hpp  ColoredButtonWithText.hpp  EdgePoint.hpp  Element.hpp  NumberInput.hpp  Option.hpp  OptionWithCheckbox.hpp  OptionWithIcon.hpp  Scrollbar.hpp  Slider.hpp  SliderWithButtons.hpp  TextInput.hpp
Anim-Paint/include/Dialogs/: AnimationsDialog.hpp  ConfirmDialog.hpp  Dialog.hpp  Dialog_Brightness_Contrast.hpp  Dialog_Chessboard.hpp  Dialog_Export.hpp  Dialog_Hue_Saturation.hpp  Dialog_Import.hpp  Dialog_Import_Animation.hpp  Dialog_Invert_Colors.hpp  Dialog_Load_Project.hpp  Dialog_Load_SpriteSheet.hpp  Dialog_Open_Project.hpp  Dialog_Outline.hpp  Dialog_Paste_From_FIle.hpp  Dialog_Resize.hpp  Dialog_Rotation.hpp  Dialog_Saturation.hpp  Dialog_Save_Project.hpp  Dialog_Sepia.hpp  Dialog_Smoothing.hpp  FileDialog.hpp  FramesDialog.hpp  LayersDialog.hpp  Palette.hpp
Anim-Paint/include/Dialogs/FileDialog/: FileDialog.hpp  FileFunctions.hpp  FileRect.hpp  LocationRect.hpp  (+1 more)
Anim-Paint/include/Element/: Button.hpp  Checkbox.hpp  EdgePoint.hpp  NumberInput.hpp  Scrollbar.hpp  TextInput.hpp
Anim-Paint/include/ElementGUI/: BigSlider.hpp  Button.hpp  Checkbox.hpp  EdgePoint.hpp  ElementGUI.hpp  NumberInput.hpp  Scrollbar.hpp  Slider.hpp  TextInput.hpp
Anim-Paint/include/Tools/: Brush.hpp  Circle.hpp  ClipBoard.hpp  Diamond.hpp  Filters.hpp  HexagonFlatTop.hpp  HexagonPointTop.hpp  Lasso.hpp  Line.hpp  Octagon.hpp  Pentagon.hpp  Rectangle.hpp  ResizableTool.hpp  Selection.hpp  Toolbar.hpp  Tools.hpp  Triangle.hpp
Anim-Paint/include/dialogs/: Dialog.hpp  Dialog_Brightness_Contrast.hpp  Dialog_Image_Rotation.hpp  Dialog_Image_Saturation.hpp  Dialog_Image_Sepia.hpp  Dialog_Rotation.hpp  Dialog_Saturation.hpp  Dialog_Save_As.hpp  Dialog_Sepia.hpp  Dialog_image_brightness_contrast.hpp  FramesDialog.hpp  LayersDialog.hpp
Anim-Paint/src/: Animation.cpp  BottomBar.cpp  Brush.cpp  Button.cpp  Canvas.cpp  Checkbox.cpp  ClipBoard.cpp  Cursor.cpp  DebugLog.cpp  Dialog.cpp  Element.cpp  ElementGUI.cpp  Filters.cpp  Frame.cpp  FramesDialog.cpp  History.cpp  Lasso.cpp  Layer.cpp  LayersDialog.cpp  MainMenu.cpp  Mouse.cpp  Selection.cpp  Slider.cpp  Textures.cpp  Theme.cpp  Time.cpp  Toolbar.cpp  Tools.cpp  Tooltip.cpp  Window.cpp  WorldToTileConverter.cpp  main.cpp  test_loader.cpp
Anim-Paint/src/Animation/: Animation.cpp  Frame.cpp  Layer.cpp
Anim-Paint/src/Components/: AnimationsDialog.cpp  AnimationsPanel.cpp  BottomBar.cpp  Canvas.cpp  FramesDialog.cpp  FramesPanel.cpp  LayersDialog.cpp  LayersPanel.cpp  MainMenu.cpp  PreviewAnimationPanel.cpp  Toolbar.cpp  Tooltip.cpp
Anim-Paint/src/Controls/: Button.cpp  ButtonWithSprite.cpp  Checkbox.cpp  ColoredButtonWithText.cpp  EdgePoint.cpp  Element.cpp  NumberInput.cpp  Option.cpp  OptionWithCheckbox.cpp  OptionWithIcon.cpp  Scrollbar.cpp  Slider.cpp  SliderWithButtons.cpp  TextInput.cpp
Anim-Paint/src/Dialogs/: AnimationsDialog.cpp  ConfirmDialog.cpp  Dialog.cpp  Dialog_Brightness_Contrast.cpp  Dialog_Chessboard.cpp  Dialog_Export.cpp  Dialog_Hue_Saturation.cpp  Dialog_Import.cpp  Dialog_Import_Animation.cpp  Dialog_Invert_Colors.cpp  Dialog_Load_Project.cpp  Dialog_Load_SpriteSheet.cpp  Dialog_Open_Project.cpp  Dialog_Outline.cpp  Dialog_Paste_From_File.cpp  Dialog_Resize.cpp  Dialog_Rotation.cpp  Dialog_Saturation.cpp  Dialog_Save_Project.cpp  Dialog_Sepia.cpp  Dialog_Smoothing.cpp  FileDialog.cpp  FramesDialog.cpp  LayersDialog.cpp  Palette.cpp
Anim-Paint/src/Element/: Button.cpp  Checkbox.cpp  EdgePoint.cpp  Element.cpp  NumberInput.cpp  Scrollbar.cpp  Slider.cpp  TextInput.cpp
Anim-Paint/src/ElementGUI/: BigSlider.cpp  Button.cpp  Checkbox.cpp  EdgePoint.cpp  ElementGUI.cpp  NumberInput.cpp  Scrollbar.cpp  Slider.cpp  TextInput.cpp
Anim-Paint/src/Tools/: Brush.cpp  Circle.cpp  ClipBoard.cpp  Diamond.cpp  Filters.cpp  HexagonFlatTop.cpp  HexagonPointTop.cpp  Lasso.cpp  Line.cpp  Octagon.cpp  Pentagon.cpp  Rectangle.cpp  ResizableTool.cpp  Selection.cpp  Toolbar.cpp  Tools.cpp  Triangle.cpp
Anim-Paint/src/dialogs/: Dialog.cpp  Dialog_Brightness_Contrast.cpp  Dialog_Image_Brightness_Contrast.cpp  Dialog_Image_Rotation.cpp  Dialog_Image_Saturation.cpp  Dialog_Image_Sepia.cpp  Dialog_Rotation.cpp  Dialog_Saturation.cpp  Dialog_Save_As.cpp  Dialog_Sepia.cpp  FramesDialog.cpp  LayersDialog.cpp
(+21 files in other folders)
